--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main-content {
+    margin-left: 250px; /* Should match the sidenav width */
+    flex-grow: 1;
+}
+
+
+.sidenav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px; /* Adjust as needed */
+    padding-top: 20px; /* Adjust as needed */
+    z-index: 1000; /* Ensure it stays above other elements */
+}
+.sidenav-no-selected{
+}
+.sidenav-selected {
+    background-color: rgb(233, 233, 233);
+}
+
+
