--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,6 @@
     flex-grow: 1;
 }
 
-
 .sidenav {
     position: fixed;
     top: 0;
@@ -17,25 +16,92 @@
     padding-top: 20px; /* Adjust as needed */
     z-index: 1000; /* Ensure it stays above other elements */
 }
+
 .sidenav-no-selected{
 }
+
 .sidenav-selected {
     background-color: rgb(233, 233, 233);
 }
 
 .card-pending{
-    border-color: yellow;
+    border-color:  #ffdd00
 }
 .card-approved{
-    border-color: green;
+    border-color: #43b02a;
 }
 
 .card-new{
-    border-color: red;
+    border-color: #ce002b
+}
+
+.card-declined{
+    border-color: #20457e
+}
+
+.btn-card{
+    background-color: #034f8d;
+    border-radius: 10px;
 }
 
 
-h1{
-    color:yellow;
+.span-pending, .span-approved, .span-new, .span-declined {
+    display: inline-block;
+    padding: 0.3rem 0.9rem;
+    border-radius: 20px;
+    font-size: 0.8rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.8px;
+    white-space: nowrap;
+    transition: all 0.3s ease;
+    border: 1px solid transparent;
 }
 
+.span-pending {
+    background-color: #fff8e1;
+    color: #ffa000;
+    border-color: #ffd54f;
+}
+
+.span-approved {
+    background-color: #e8f5e9;
+    color: #2e7d32;
+    border-color: #81c784;
+}
+
+.span-new {
+    background-color: #ffebee;
+    color: #c62828;
+    border-color: #ef9a9a;
+}
+
+.span-declined {
+    background-color: #ebefff;
+    color: #284dc6;
+    border-color: #20457e;
+}
+
+
+@media print {
+    .no-print {
+        display: none;
+    }
+
+    .print-only {
+        display: block;
+    }
+
+    .main-content {
+        margin-left: 0px; /* Should match the sidenav width */
+        flex-grow: 1;
+    }
+
+    .print{
+        
+    }
+}
+
+.print-only {
+    display: none;
+}
